--- a/site.css
+++ b/site.css
@@ -3,5 +3,10 @@ body{
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size-adjust: inherit;   
-    float: center; 
+    float: center;
+    filter: blur(); 
 }
+h1{
+    
+}
+
