--- a/site.css
+++ b/site.css
@@ -1,13 +1,45 @@
-body{
-    font-size: 300%;
-    text-align: center;
+body {
+    /*font-size: 300%; */
     font-family: Arial, Helvetica, sans-serif;
-    font-size-adjust: inherit;   
-    float: center;
-    filter: blur(); 
-}
-h1{
-    font-size: 3vw;
-    color: darkred;
+    font-size-adjust: inherit;
 }
 
+.container {
+    color: darkred;
+    position: relative;
+}
+
+.topnav {
+    background-color: lightyellow;
+    overflow: hidden;
+}
+
+3 .topnav a {
+    float: left;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.topnav a.active {
+    background-color: #4CAF50;
+    color: white;
+}
+
+img {
+    width: 100%;
+}
+
+.text_img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
