--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,18 @@
 @media only screen and (max-width: 992px) {
-    .navbar-brand>img {
+    .brand-logo>img {
         height: 56px !important;
         padding: 0px;
         width: auto;
     }
-    .navbar-brand {
-        padding-left: 20vw !important;
+}
+
+@media only screen and (min-width: 992px) {
+    .brand-logo {
+        padding-left: 10vw !important;
     }
 }
 
-.navbar-brand {
-    padding-left: 10vw;
-}
-
-.navbar-brand>img {
+.brand-logo>img {
     height: 64px;
     padding: 0px;
     width: auto;
