--- a/styles.css
+++ b/styles.css
@@ -37,3 +37,14 @@ p {
 #nav-mobile a {
     color: white;
 }
+
+h1 {
+    font-family: Open Sans;
+    font-weight: 800;
+}
+
+@media only screen and (max-width: 600px) {
+    .parallax-container img {
+        width: auto;
+    }
+}
