--- a/styles.css
+++ b/styles.css
@@ -46,3 +46,8 @@ h1 {
 .activator {
     font-weight: 400 !important;
 }
+
+.nav-wrapper {
+    background: rgb(0, 0, 0);
+    background: linear-gradient(55deg, rgba(0, 0, 0, 1) 0%, rgba(128, 3, 3, 1) 100%);
+}
