--- a/styles.css
+++ b/styles.css
@@ -61,3 +61,11 @@ h1 {
 hr {
     border: 2px solid rgba(128, 3, 3, 1);
 }
+
+a .fa {
+    transition: transform .8s;
+}
+
+a .fa:hover {
+    transform: rotate(360deg);
+}
