make the icons a bit bigger

--- a/styles.css
+++ b/styles.css
@@ -64,9 +64,10 @@ hr {
 
 .card-reveal a .fa {
     transition: transform .8s;
+    font-size: 2.3rem;
 }
 
-a .fa:hover {
+.card-reveal a .fa:hover {
     transform: rotate(360deg);
 }
 
