--- a/styles.css
+++ b/styles.css
@@ -87,14 +87,13 @@ nav .fa {
     padding-top: 6%;
     padding-left: 5% !important;
     width: 60%;
-    background-color: rgba(128, 3, 3, 1);
+    background: linear-gradient(10deg, rgba(0, 0, 0, 1) 0%, rgba(128, 3, 3, 1) 100%);
 }
 
 .sidenav li a {
     font-size: 2rem !important;
     padding-bottom: 4rem !important;
     color: white;
-    background-color: rgba(128, 3, 3, 1);
 }
 
 .sidenav li a i {
