--- a/styles.css
+++ b/styles.css
@@ -86,7 +86,7 @@ nav .fa {
 .sidenav {
     padding-top: 6%;
     padding-left: 5% !important;
-    width: 67%;
+    width: 75% !important;
     background: linear-gradient(10deg, rgba(0, 0, 0, 1) 0%, rgba(128, 3, 3, 1) 100%);
 }
 
