center the logo (!!!!!!!!!!!1)

--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,11 @@
     .parallax-container {
         height: 500px !important;
     }
+    /*
     nav .brand-logo {
         left: 45.5% !important;
     }
+    */
 }
 
 @media only screen and (min-width: 992px) {
