--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,10 @@ h1 {
     background: linear-gradient(55deg, rgba(0, 0, 0, 1) 0%, rgba(128, 3, 3, 1) 100%);
 }
 
+.nav {
+    width: 100% !important;
+}
+
 hr {
     border: 2px solid rgba(128, 3, 3, 1);
 }
