--- a/styles.css
+++ b/styles.css
@@ -113,7 +113,7 @@ nav .fa {
 }
 
 .page-footer li span a i {
-    padding-left: 20px;
-    padding-top: 20px;
-    padding-right: 60px;
+    margin-left: 20px;
+    margin-top: 20px;
+    margin-right: 60px;
 }
