--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,11 @@
     .parallax-container {
         height: 500px !important;
     }
+    /* it s working now lmao
     nav .brand-logo {
         left: 47% !important;
     }
+    */
 }
 
 @media only screen and (min-width: 992px) {
@@ -59,10 +61,6 @@ h1 {
 .nav-wrapper {
     background: rgb(0, 0, 0);
     background: linear-gradient(55deg, rgba(0, 0, 0, 1) 0%, rgba(128, 3, 3, 1) 100%);
-}
-
-.nav {
-    width: 100% !important;
 }
 
 hr {
