center the logo routine again but only on one page i honestly just don t understand anymore how this thing even works

--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,9 @@
     .parallax-container {
         height: 500px !important;
     }
-    /* it s working now lmao
-    nav .brand-logo {
+    nav #our_team {
         left: 47% !important;
     }
-    */
 }
 
 @media only screen and (min-width: 992px) {
