--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@
         padding-left: 10vw !important;
     }
     .atak-big {
-        margin-top: 70px !important;
+        margin-top: 80px !important;
     }
     .big-container {
         width: 95% !important;
@@ -153,4 +153,8 @@ nav .fa {
 
 .carousel-item {
     object-fit: cover !important;
+}
+
+.fa-plus-circle {
+    font-size: 3.3rem !important;
 }
